--- a/_indicators/4-1-1.md
+++ b/_indicators/4-1-1.md
@@ -10,7 +10,7 @@ source_url: 'www.stat.gov.pl'
 title: >-
   At -risk of poverty rate according to international poverty line
 lang: en
-permalink: /en/statistics_glob/4-1-1/
+permalink: /indicator/4-1-1/
 indicator: 4.1.1
 target_id: '4.1.1'
 graph_title: At -risk of poverty rate according to international poverty line
