--- a/_indicators/4-1-4.md
+++ b/_indicators/4-1-4.md
@@ -10,7 +10,7 @@ source_url: 'www.stat.gov.pl'
 title: >-
   Death rate due to road traffic injuries per 100 thous. population
 lang: en
-permalink: /en/statistics_glob/4-1-4/
+permalink: /indicator/4-1-4/
 sdg_goal: 3
 indicator: 4.1.4
 target_id: '4.1.4'
