--- a/_indicators/4-1-7.md
+++ b/_indicators/4-1-7.md
@@ -10,7 +10,7 @@ source_url: 'www.stat.gov.pl'
 title: >-
   Percentage of persons with basic or above basic digital skills
 lang: en
-permalink: /en/statistics_glob/4-1-7/
+permalink: /indicator/4-1-7/
 sdg_goal: 4
 indicator: 4.1.7
 target_id: '4.1.7'
