--- a/_indicators/4-2-1.md
+++ b/_indicators/4-2-1.md
@@ -10,7 +10,7 @@ source_url: 'www.stat.gov.pl'
 title: >-
   Fixed Internet broadband subscriptions per 100 inhabitants
 lang: en
-permalink: /en/statistics_glob/4-2-1/
+permalink: /indicator/4-2-1/
 sdg_goal: 17
 indicator: 4.2.1
 target_id: '4.2.1'
