--- a/_indicators/4-2-2.md
+++ b/_indicators/4-2-2.md
@@ -10,7 +10,7 @@ source_url: 'www.stat.gov.pl'
 title: >-
   Proportion of individuals aged 16-74 using the Internet in the last 3 months
 lang: en
-permalink: /en/statistics_glob/4-2-2/
+permalink: /indicator/4-2-2/
 sdg_goal: 17
 indicator: 4.2.2
 target_id: '4.2.2'
