--- a/_indicators/4-1-5.md
+++ b/_indicators/4-1-5.md
@@ -10,7 +10,7 @@ source_url: 'www.stat.gov.pl'
 title: >-
   Percentage of children under 5 years of age with health subjectively evaluated as very good or good
 lang: en
-permalink: /en/statistics_glob/4-1-5/
+permalink: /indicator/4-1-5/
 sdg_goal: 4
 indicator: 4.1.5
 target_id: '4.1.5'
