--- a/_indicators/4-1-6.md
+++ b/_indicators/4-1-6.md
@@ -10,7 +10,7 @@ source_url: 'www.stat.gov.pl'
 title: >-
   Proportion of youth and adults with information and communications technology (ICT) skills, by type of skill
 lang: en
-permalink: /en/statistics_glob/4-1-6/
+permalink: /indicator/4-1-6/
 sdg_goal: 4
 indicator: 4.1.6
 target_id: '4.1.6'
