--- a/_indicators/4-1-8.md
+++ b/_indicators/4-1-8.md
@@ -10,7 +10,7 @@ source_url: 'www.stat.gov.pl'
 title: >-
   Proportion of individuals who own a mobile telephone
 lang: en
-permalink: /en/statistics_glob/4-1-8/
+permalink: /indicator/4-1-8/
 sdg_goal: 5
 indicator: 4.1.8
 target_id: '4.1.8'
