--- a/_indicators/4-1-9.md
+++ b/_indicators/4-1-9.md
@@ -10,7 +10,7 @@ source_url: 'www.stat.gov.pl'
 title: >-
   Passenger and freight volumes, by mode of transport
 lang: en
-permalink: /en/statistics_glob/4-1-9/
+permalink: /indicator/4-1-9/
 sdg_goal: 9
 indicator: 4.1.9
 target_id: '4.1.9'
